--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "editable": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "editable": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "editable": true
    },
@@ -117,7 +117,7 @@
        " (5, datetime.datetime(2018, 11, 22, 0, 23, 40, 796000), 15, 'paid', None, None, 818, 'Chicago-Naperville-Elgin, IL-IN-WI', '\"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/36.0.1985.125 Chrome/36.0.1985.125 Safari/537.36\"')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "editable": true
    },
@@ -149,15 +149,15 @@
        "        <th>count</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>6813</td>\n",
+       "        <td>6820</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(6813,)]"
+       "[(6820,)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "editable": true
    },
@@ -193,51 +193,51 @@
        "        <th>level</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>15</td>\n",
-       "        <td>Lily</td>\n",
-       "        <td>Koch</td>\n",
+       "        <td>57</td>\n",
+       "        <td>Katherine</td>\n",
+       "        <td>Gay</td>\n",
        "        <td>F</td>\n",
-       "        <td>paid</td>\n",
+       "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>26</td>\n",
-       "        <td>Ryan</td>\n",
-       "        <td>Smith</td>\n",
+       "        <td>23</td>\n",
+       "        <td>Morris</td>\n",
+       "        <td>Gilmore</td>\n",
        "        <td>M</td>\n",
        "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>50</td>\n",
-       "        <td>Ava</td>\n",
-       "        <td>Robinson</td>\n",
+       "        <td>32</td>\n",
+       "        <td>Lily</td>\n",
+       "        <td>Burns</td>\n",
        "        <td>F</td>\n",
        "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>97</td>\n",
-       "        <td>Kate</td>\n",
-       "        <td>Harrell</td>\n",
+       "        <td>63</td>\n",
+       "        <td>Ayla</td>\n",
+       "        <td>Johnson</td>\n",
        "        <td>F</td>\n",
-       "        <td>paid</td>\n",
+       "        <td>free</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>101</td>\n",
-       "        <td>Jayden</td>\n",
-       "        <td>Fox</td>\n",
+       "        <td>74</td>\n",
+       "        <td>Braden</td>\n",
+       "        <td>Parker</td>\n",
        "        <td>M</td>\n",
        "        <td>free</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(15, 'Lily', 'Koch', 'F', 'paid'),\n",
-       " (26, 'Ryan', 'Smith', 'M', 'free'),\n",
-       " (50, 'Ava', 'Robinson', 'F', 'free'),\n",
-       " (97, 'Kate', 'Harrell', 'F', 'paid'),\n",
-       " (101, 'Jayden', 'Fox', 'M', 'free')]"
+       "[(57, 'Katherine', 'Gay', 'F', 'free'),\n",
+       " (23, 'Morris', 'Gilmore', 'M', 'free'),\n",
+       " (32, 'Lily', 'Burns', 'F', 'free'),\n",
+       " (63, 'Ayla', 'Johnson', 'F', 'free'),\n",
+       " (74, 'Braden', 'Parker', 'M', 'free')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "editable": true
    },
@@ -277,7 +277,7 @@
        "[(96,)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "editable": true
    },
@@ -357,7 +357,7 @@
        " ('SOBKWDJ12A8C13B2F3', 'Wild Rose (Back 2 Basics Mix)', 'AR36F9J1187FB406F1', 0, Decimal('230.71302'))]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "editable": true
    },
@@ -397,7 +397,7 @@
        "[(71,)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "editable": true
    },
@@ -477,7 +477,7 @@
        " ('AR36F9J1187FB406F1', 'Bombay Rockers', 'Denmark', 56.27609, 9.51695)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "editable": true
    },
@@ -517,7 +517,7 @@
        "[(69,)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "editable": true
    },
@@ -609,7 +609,7 @@
        " (datetime.datetime(2018, 11, 22, 0, 23, 40, 796000), 0, 22, 47, 11, 2018, 3)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "editable": true
    },
@@ -649,7 +649,7 @@
        "[(6813,)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "editable": true
    },
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "editable": true
    },
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "editable": true
    },
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "editable": true
    },
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "editable": true
    },
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "editable": true
    },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "editable": true
    },
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "editable": true
    },
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "editable": true
    },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "editable": true
    },
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "editable": true
    },
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "editable": true
    },
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "editable": true
    },
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "editable": true
    },
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {
     "editable": true
    },
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {
     "editable": true
    },
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {
     "editable": true
    },
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {
     "editable": true
    },
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {
     "editable": true
    },
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {
     "editable": true
    },
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {
     "editable": true
    },
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {
     "editable": true
    },
